--- a/client/style.css
+++ b/client/style.css
@@ -22,7 +22,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0.75rem;
-  font-size: 1.5rem;
+  font-size: 1rem;
 
   display: flex;
   justify-content: center;
@@ -37,11 +37,11 @@ body {
   width: 0.5rem;
   height: 0.5rem;
 }
+
 ::-webkit-scrollbar-thumb {
   background: var(--foreground);
   border-radius: 0.5rem;
 }
-
 
 .main {
   background: linear-gradient(315deg, var(--background), var(--foreground));
@@ -53,7 +53,7 @@ body {
   gap: 1.25rem;
 
   box-sizing: border-box;
-  min-width: min(99vw, 400px);
+  min-width: min(99vw, 550px);
   max-width: 800px;
   min-height: 200px;
   border-radius: 2rem;
@@ -65,24 +65,28 @@ body {
   text-align: center;
   color: var(--contrast-light);
   text-shadow: 1px 1px 2px var(--contrast-light);
-  margin: 0;
+  margin: 30px 0 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
 .result-title {
   color: var(--contrast-light);
   margin: 0;
 }
 
-
 input {
   background-color: var(--foreground);
   border: 1px solid var(--contrast-light);
   outline: none;
-  padding: 1rem;
+  padding: 0.8rem;
   border-radius: 1rem;
   min-width: 0;
   color: var(--contrast-light);
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
+
 input::placeholder {
   color: #FFFFFF70;
 }
@@ -103,6 +107,7 @@ input::placeholder {
   align-items: center;
   flex-wrap: wrap;
 }
+
 .count-title {
   margin: 0;
 }
@@ -112,11 +117,14 @@ input::placeholder {
   border: none;
   cursor: pointer;
   border-radius: 1rem;
+  padding: 10px 20px;
   color: var(--contrast-light);
 }
+
 #calc-button:hover, #cargo-add:hover {
   background: var(--foreground);
 }
+
 #calc-button:active, #cargo-add:active {
   background: var(--contrast-light);
   color: var(--contrast-dark);
@@ -147,7 +155,19 @@ input::placeholder {
 .cargo-info {
   display: flex;
   flex-wrap: wrap;
-  justify-content: start;
+  flex-direction: column;
   margin-top: 0.5rem;
   padding: 0.5rem;
+}
+
+.form-fields{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: left;
+  margin-bottom: 10px;
+}
+
+.logo {
+
 }
