--- a/client/style.css
+++ b/client/style.css
@@ -27,6 +27,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  gap: 1rem;
 
   background-color: var(--background);
   color: var(--contrast-light);
@@ -43,7 +45,7 @@ body {
   border-radius: 0.5rem;
 }
 
-.main {
+main, section {
   background: linear-gradient(315deg, var(--background), var(--foreground));
   border: 1px solid var(--contrast-light);
   box-shadow: 0 0 1rem var(--contrast-light);
@@ -58,6 +60,11 @@ body {
   min-height: 200px;
   border-radius: 2rem;
   padding: 1rem;
+}
+
+#report-section {
+  justify-content: center;
+  align-items: center;
 }
 
 .title {
